fix wrapping activity data

--- a/src/ui/pages/work/activities/Activity.css
+++ b/src/ui/pages/work/activities/Activity.css
@@ -31,4 +31,5 @@
     align-items: center;
     padding: 0.5rem;
     width: 100%;
+    text-align: center;
 }
